[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.52"
cc = "1.0"
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
illumos-devinfo = { git = "https://github.com/oxidecomputer/illumos-devinfo", branch = "main" }
tofino = { path = "crates/tofino" }
